# project_alpha

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CACHE.md  Dockerfile  LICENSE  README.md  cache_performance_test_20250628_174659.txt  cache_performance_test_20250628_175029.txt  main.py  pyproject.toml  requirements.txt  temp_ssl_test.py
backend/: main.py
backend/core/: chart_generator.py  data_fetcher.py  instruction_validator.py  llm_agent.py  llm_analyzer.py  orchestrator.py  performance_monitor.py  report_converter.py  report_service.py  smart_cache.py
backend/db/: __init__.py  init_reports_db.py  reports.py
backend/models/: schemas.py
backend/templates/: chart_template.html
config/: cache_config.yaml  settings.py
config/assets/: twitter_qr.b64
docs/: architecture.md
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
scripts/: cache_manager.py  cleanup_reports.py  convert_report_cli.py  generate_chart_cli.py
tests/: test_cache_performance.py  test_instruction_performance.py
utils/: helpers.py
